--- a/View_Assist_control_automations/blueprint-devicecontrol.yaml
+++ b/View_Assist_control_automations/blueprint-devicecontrol.yaml
@@ -380,7 +380,7 @@ action:
         attribute: mode
         enabled: true
       then:
-      - service: browser_mod.navigate
+      - service: remote_assist_display.navigate
         data:
           path: '{{home}}'
         target:
@@ -392,7 +392,7 @@ action:
         attribute: mode
         enabled: true
       then:
-      - service: browser_mod.navigate
+      - service: remote_assist_display.navigate
         data:
           path: '{{ music }}'
         target:
@@ -418,7 +418,7 @@ action:
                 state: cycle
                 attribute: mode
               then:
-              - service: browser_mod.navigate
+              - service: remote_assist_display.navigate
                 data:
                   path: '{{dashboard}}/{{repeat.item}}'
                 target:
@@ -509,7 +509,7 @@ action:
         value_template: '{% if ''id'' in state_attr(intent, ''intent_output'')[''response''][''data''][''success''][0]
           %} true {% else %} false {% endif %}'
       then:
-      - service: browser_mod.navigate
+      - service: remote_assist_display.navigate
         data:
           path: '{{ intent_view }}'
         target:
